--- a/index.html
+++ b/index.html
@@ -17,25 +17,23 @@
         <h2>D3 Selections</h2>
         <div class="row">
           <div class="column">
-            <p>Try using selections on the elements below. For a full reference on selections, see <a href="https://github.com/d3/d3-selection">here</a></p>
-
-            <div id="section1">
-              <h3 class="blue">Header 1 (h3)</h3>
-              <h3>Header 2 (h3) </h3>
-              <h3>Header 3 (h3) </h3>
-            </div>
-          </div>
-          <div class="column">
-            <strong>Some things to try: </strong>
+            <p>Try using selections on the h3 elements below. The elements are wrapped in a div whose id is 'section1'. For a full reference on selections, see <a href="https://github.com/d3/d3-selection">here</a></p>
             <ol>
               <li>Select the first h3 element using d3.select()</li>
               <li>Select all of the h3 elements using d3.selectAll()</li>
-              <li>Add or remove the 'blue' css class to the h3 elemdents using selection.classed()</li>
+              <li>Add or remove the 'blue' css class to the h3 elements using selection.classed()</li>
               <li>Add an attribute using selection.attr()</li>
               <li>Change the text of a header element using selection.text()</li>
               <li>Add a new header using selection.append()</li>
               <li>Remove a header using selection.remove()</li>
             </ol>
+          </div>
+          <div class="column">
+            <div id="section1">
+              <h3 id="s1h1" class="blue">Header 1 (h3)</h3>
+              <h3 id="s1h2">Header 2 (h3) </h3>
+              <h3 id="s1h3">Header 3 (h3) </h3>
+            </div>
           </div>
         </div>
       </div>
@@ -43,19 +41,18 @@
       <div>
         <h2>D3 and SVG</h2>
         <div class="row">
-          <div class="column">
-            <strong>Add SVG elements to the div on the right</strong>
-            <ol>
-              <li>Add an svg element to the div on the right with id = "section2"</li>
-              <li>Add a g element to the svg.  g elements are like divs for svg's</li>
-              <li>Add an svg shape of your choice to the g element</li>
+        <div class="column">
+        <p>D3's real strength is manipulating SVG. Try the items below.</p>
+        <ol>
+        <li>Add an svg element to the div on the right. The div's id is "section2". Save the d3 selection to a variable, it will make it easier later on.</li>
+        <li>Add a g element to the svg.  g elements are like divs for svg's. Save the d3 selection to a variable as well.</li>
+        <li>Add an svg shape of your choice to the g element</li>
             </ol>
           </div>
-          <div id="section2" class="column">
-            <h4>SVG goes in here</h4>
+        <div id="section2" class="column">
           </div>
         </div>
-      </div>
+                        </div>
       <hr>
       <div>
         <h2>Binding Data</h2>
@@ -64,14 +61,18 @@
             <ol>
               <li>Add an svg element to the div on the right with id = "section3"</li>
               <li>Add a g element to the svg element</li>
-              <li>This site includes data in a file name data.js Bind the dinosaurs array from data.js to some circle elements.  Make sure you put the circles inside the g element you created in the previous step</li>
-              <li>Let's work with data joins. Bind the circles from the previous step to the unicorns array. You'll need to use the enter and exit selections to make this work</li>
-              <!-- TODO: make the transitions a script -->
-              <li>Now try adding a transition. Re-bind the circles to the dinosaurs array and transition their radius</li>
+              <li>This site includes data in a file named data.js Bind the dinosaurs array from data.js to some circle elements.  Make sure you put the circles inside the g element you created in the previous step</li>
+              <li>Let's work with data joins. Bind the circles from the previous step to the unicorns array and save the return value to a variable.
+                <ol>
+                  <li>The length of the unicorns array is less than the length of the dinosaurs array. Use the exit selection to remove the extra elements</li>
+                  <li>Try using the enter selection to update the appearance of the circles. What do you think will change?</li>
+                  <li>Change the remaining elements with the update selection</li>
+                </ol>
+              </li>
+              <li>Now try adding a transition. Re-bind the circles to the dinosaurs array and transition their radius. You'll probably want to write a script for this. See <a href="https://github.com/d3/d3-transition">here</a> for a complete reference on transitions</li>
             </ol>
           </div>
           <div id="section3" class="column">
-            <h4>SVG goes here</h4>
           </div>
         </div>
       </div>
